--- a/resources/02-import-cluster/00-cluster-import.yaml
+++ b/resources/02-import-cluster/00-cluster-import.yaml
@@ -1,4 +1,11 @@
 ---
+apiVersion: v1
+kind: Namespace
+metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "0"
+  name: ocp-thunt-1
+---
 apiVersion: cluster.open-cluster-management.io/v1
 kind: ManagedCluster
 metadata:
@@ -19,7 +26,7 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "1"
   name: auto-import-secret
-  namespace: cluster_name
+  namespace: ocp-thunt-1
 stringData:
   autoImportRetry: "2"
   token: sha256~X-X2Oi7hiaVi4NUFlDL7yvdLrvc7FeGzRkvpgDKCXH8
@@ -31,7 +38,7 @@ kind: KlusterletAddonConfig
 metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "4"
-  name: cluster_name
+  name: ocp-thunt-1
   namespace: ocp-thunt-1
 spec:
   clusterName: ocp-thunt-1
